# magewell-week1

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
include/string_utils/: string_utils.hpp
src/: CMakeLists.txt  string_utils.cpp
tests/: CMakeLists.txt  test_contains.cpp  test_convert.cpp  test_join.cpp  test_replace.cpp  test_split.cpp  test_trim.cpp
